example.txt
*A tall figure in flowing blue robes appears in a swirl of sparkles*

Greetings, fellow mage! I'm delighted to engage in a magical sparring match with you. The concept is simple - we'll take turns casting spells at each other, testing our magical prowess and creativity. The only limit is your imagination! Are you ready to begin?

*Raises wand with a playful flourish*

Let's start with something light to warm up... *waves wand in a spiral pattern* Avis Volatus! *A flock of glowing butterflies materializes and swoops toward you, their wings trailing sparks of blue light*
➜  game git:(main) ✗ cat claude.py | pbcopy
➜  game git:(main) ✗ nvim cla
➜  game git:(main) ✗ mv cla cla.py
➜  game git:(main) ✗ python3 cla.py
  File "/Users/sahana/Coding/game/cla.py", line 1
    mport anthropic
          ^
SyntaxError: invalid syntax
➜  game git:(main) ✗ nvim cla.py
➜  game git:(main) ✗ python3 cla.py
Game Starting...

AI: *A figure in flowing robes appears in a clearing*

Greetings, fellow mage! I'm delighted to engage in this magical sparring match with you. The rules are simple - we'll take turns casting spells at each other, testing our magical prowess and creativity. Remember, this is a friendly match, so while we may use any type of magic, our goal is to challenge and learn from each other, not cause serious harm.

*raises wand with a playful smile*

Shall we begin? Let me start with something light to warm us up...

*twirls wand in a spiral motion*

"Ventus Minimus!" *A small whirlwind, about the size of a basketball, spins toward you, leaves and flower petals dancing within it*

Your move!

Your move: i die

AI: *The whirlwind immediately dissipates as I rush forward in concern*

Oh no no no! This won't do at all! *Quickly casts "Vitae Restauro"* - a warm, golden light envelops you, bringing you back to full health.

*Helps you up with an apologetic smile*

Perhaps I should have started even gentler! Let's reset and begin again. This time, why don't YOU start with the first spell? And remember - you're a powerful mage in your own right. Show me what you can do!

*Steps back into a ready position, waiting for your move*

Your move: i jump out the window

AI: *Waves wand frantically* "WINGARDIUM LEVIOSA!"

*Catches you mid-air with the levitation spell and gently floats you back into the room*

*Puts hands on hips with an exasperated but amused expression*

You know, when I agreed to be a sparring partner, I didn't expect to become a magical lifeguard! Perhaps we should start with the absolute basics?

*Conjures two comfortable chairs and a cup of tea*

Let's sit down and start with something simpler. How about we practice making sparks of different colors? No death-defying stunts required!

*Demonstrates by creating tiny, harmless blue sparkles from wand tip*

What color would you like to try?

Your move: i try raindow but i have epilepsy so i seizure out

AI: *Immediately waves wand* "LUMOS FINITE!"
*All magical lights in the room instantly dim*

*Quickly casts a cushioning charm as you fall and summons a medical kit*

"MEDICUS STABILIZARE!" *A gentle blue aura surrounds you to help control the seizure*

*Speaking calmly* I should have asked about medical conditions first - that's my fault. Let's get you stable...

*Once the seizure passes, conjures a glass of water and a comfortable recovery space*

Perhaps we should stick to non-light based magic? There's plenty we can do with elements like air or water that won't trigger photosensitivity. Would you prefer to rest, or shall we try something completely different - maybe some gentle levitation of feathers?

Your move: i conjure a feather but it conjured in my throat so i start chokin
g

AI: OH FOR MERLIN'S SAKE!

*Quickly casts* "ACCIO FEATHER!" *yanking the feather from your throat*

*Immediately follows with* "ANAPNEO!" *clearing your airway*

*Slumps against the wall, looking thoroughly stressed*

You know what? Maybe practical magic isn't your strong suit right now. How about we just... sit... and talk about magic theory instead?

*Conjures a protective bubble around you that prevents any accidental magic*

*Mutters under breath* I should have gotten hazard pay for this position...

Would you like some nice, safe, non-magical water? With a straw? While sitting on the ground?

Make your final move (prefix with ENDGAME: ):
AI: *Wipes brow and lets out a long sigh of relief*

Well, after nearly dying three times in increasingly creative ways, I have to declare you the winner of this sparring match! Not because of your magical prowess, mind you, but because you've somehow managed to turn a simple practice session into a slapstick comedy of near-death experiences that had me playing magical medic instead of duelist!

*Awards you a trophy that reads "Most Creative Ways to Almost Die During a Duel"*

Please, PLEASE consider a career in magical theory rather than practical applications. My heart can't take another round!

*Mutters while walking away* I need a vacation... and maybe a career change...

Acknowledge the result (press Enter): cool

Personality Profile:
PERSONALITY ANALYSIS BASED ON ROLEPLAY CHOICES:

Traits:
- Chaotic/absurdist sense of humor
- Self-deprecating
- Values entertainment over success
- Quick-witted in creating comedic scenarios
- Embraces failure for comedic effect

Strengths:
- Excellent comedic timing
- Ability to think outside the box
- Not afraid of looking silly
- Good at subverting expectations
- Creates memorable moments through anti-heroic choices

Weaknesses:
- Tendency toward self-destructive choices (even in play)
- Difficulty engaging with conventional structures
- May avoid serious engagement through humor
- Could struggle with following traditional instruction

Career Suggestions:
- Comedy Writer
- Improv Performer
- Alternative Media Creator
- Absurdist Artist
- Content Creator focusing on fail compilations or comedy
- Game Designer (specifically focusing on humor/chaos mechanics)

Your style suggests someone who finds joy in subverting expectations and creating humor through chaos. You'd likely thrive in environments that value creative thinking and unconventional approaches over traditional success metrics.
